# brs-backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.gradle  business_prd.md  database-setup.sql  deploy-app.ps1  deploy-app.sh  docker-compose.yml  entrypoint.sh  gradlew  init.sql  pyproject.toml  pytest.ini  seed_data.py  technical_prd.md  test.env
.cursor/rules/: rules.mdc
.github/workflows/: ci.yml  deploy.yml  infrastructure.yml
alembic/: env.py
alembic/versions/: 20250902_1855_e200c4daa502_initial_database_schema.py  20250902_1857_0dc08447ccf6_add_additional_performance_indexes.py  20250902_1939_4145f14198c3_add_book_search_optimization_indexes.py  20250902_2014_e3b3dd9b6347_add_unique_constraint_user_book_review.py
app/: config.py  database.py  main.py
app/api/: auth.py  books.py  genres.py  monitoring.py  recommendations.py  reviews.py  users.py
app/core/: auth.py  exceptions.py  security.py
app/core/recommendations/: __init__.py  genre.py  personal.py  popular.py
app/middleware/: __init__.py  rate_limit.py
app/models/: __init__.py  book.py  book_genre.py  genre.py  review.py  user.py  user_favorite.py
app/schemas/: __init__.py  auth.py  book.py  common.py  genre.py  recommendation.py  review.py  user.py  user_favorite.py  validation.py
app/utils/: rating_calculator.py
docs/: AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  migration-cronjob.yaml  migration-job.yaml  namespace.yaml  rbac.yaml  secrets.yaml  service.yaml
scripts/: deploy-aws-windows.ps1  deploy.sh  setup-infrastructure.sh
src/main/java/com/talentica/brs/: BookReviewServiceApplication.java
src/main/java/com/talentica/brs/config/: AppProperties.java  AsyncConfig.java  CacheConfig.java  ConfigurationValidator.java  CorsConfig.java
src/main/java/com/talentica/brs/model/entity/: Book.java  Favorite.java  Review.java  User.java
src/main/java/com/talentica/brs/repository/: UserRepository.java
src/main/resources/: application-dev.yml  application-test.yml  application.yml
src/main/resources/db/migration/: V1__Create_initial_schema.sql  V2__Insert_test_data.sql
src/test/java/com/talentica/brs/: BookReviewServiceApplicationTests.java  FlywayMigrationTest.java  SimpleSchemaValidationTest.java
src/test/java/com/talentica/brs/config/: AppPropertiesTest.java  CacheConfigTest.java  SimpleConfigTest.java
src/test/resources/: application-test.yml
tasks/: 00-task-progress-tracker.md  01-project-setup-development-environment.md  02-database-models-migrations.md  03-authentication-security-system.md  04-user-management-api.md  05-book-genre-management-api.md  06-review-rating-system.md  07-recommendation-engine.md  08-testing-code-quality.md  09-api-documentation-validation.md  10-deployment-production-setup.md  README.md  task-01-project-setup-database.md  task-02-application-configuration.md  task-03-user-management-system.md  task-04-book-management-system.md  task-05-review-rating-system.md  task-06-jwt-authentication-security.md  task-07-authorization-rate-limiting.md  task-08-recommendation-engine.md  task-09-caching-performance-optimization.md  task-10-rest-api-documentation.md
terraform/free-tier/: config.env.template  main.tf  outputs.tf  user-data.sh  variables.tf  versions.tf
tests/: conftest.py  test_models.py  test_review_api.py
tests/test_api/: test_auth_integration.py  test_books_integration.py  test_recommendations_integration.py  test_users_integration.py  test_validation_enhanced.py
tests/test_core/: test_auth.py  test_security.py
tests/test_core/test_recommendations/: test_genre.py  test_personal.py  test_popular.py
tests/test_performance/: test_api_performance.py
tests/test_schemas/: test_book_schemas.py  test_review_schemas.py  test_user_schemas.py
